--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Indian Statistical Institute (ISI), Kolkata<br/>
 Project : Time Memory Data Trade-off Attack on Data Encryption Standard (DES) under Dr. Subhamoy Maitra, Applied Statistical Unit</p>
          </div>
        </div>
-               <div class="col-lg-12 text-center mt-30"><a class="main-btn" href="AnmolMahajanCV.pdf" target="_blank">Download CV</a></div>
+               <div class="col-lg-12 text-center mt-30"><a class="main-btn" href="Anmol_resume_final.pdf" target="_blank">Download CV</a></div>
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
